@@ -15,7 +15,7 @@ rtps.writer.heartbeat-period=5000
 
 # Delay before writer responds to NACK messages
 rtps.writer.nack-response-delay = 200
-#rtps.writer.nack-suppression-duration = 0
+rtps.writer.nack-suppression-duration = 0
 
 # Delay before reader responds to heartbeat messages
 rtps.reader.heartbeat-response-delay = 500
